# workflows-acp

./: .gitignore  .mcp.json  CONTRIBUTING.md  Makefile  README.md  agent_config.yaml  config.example.yaml  pyproject.toml
.github/workflows/: docker-image.yaml  lint.yaml  release_llamagram.yaml  release_lobsterx.yaml  test.yaml  typecheck.yaml
examples/: README.md
examples/cli/llamaindex-expert/: README.md  agent_config.yaml
examples/cli/technical-research-assistant/: agent_config.yaml
examples/llamaindex-expert/: .mcp.json  agent_config.yaml
examples/python-api/: calculator.py  context7_mcp.py
examples/technical-research-assistant/: .mcp.json  README.md
src/workflows_acp/: __init__.py  _templating.py  acp_wrapper.py  cli.py  constants.py  events.py  llm_wrapper.py  mcp_wrapper.py  models.py  workflow.py
src/workflows_acp/llms/: anthropic_llm.py  google_llm.py  openai_llm.py  retry.py
src/workflows_acp/tools/: __init__.py  bash.py  definitions.py  filesystem.py  memory.py  todo.py
tests/: conftest.py  test__templating.py  test_acp_wrapper.py  test_cli.py  test_llm_wrapper.py  test_mcp_wrapper.py  test_models.py
tests/llms/: test_anthropic_llm.py  test_google_llm.py  test_models.py  test_openai_llm.py  test_retry.py
tests/testfiles/: agent_config.yaml
tests/tools/: test_agentfs.py  test_bash.py  test_filesystem.py  test_memory.py  test_todo.py
